--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_login">S\'identifier</string>
     <string name="button_logout">Créer un compte</string>
+    <string name="label_welcome">Bienvenue</string>
 </resources>
