--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,15 @@
     <string name="app_name">BamboozApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Page Accueil -->
     <string name="button_login">S\'identifier</string>
     <string name="button_logout">Créer un compte</string>
     <string name="label_welcome">Bienvenue</string>
+
+    <!-- Page Login -->
+    <string name="label_mail">Adresse e-mail</string>
+    <string name="label_password">Mot de passe</string>
+    <string name="button_login_action">Se connecter</string>
+
 </resources>
