--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="label_password">Mot de passe</string>
     <string name="button_login_action">Se connecter</string>
 
+    <!-- Page Profile -->
+
 </resources>
